# fastapi-a2a

./: .gitignore  .pyre_configuration  CHANGELOG.md  ERD.md  LICENSE  README.md  alembic.ini  fastapi-a2a-erd.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
alembic/: env.py
examples/: quickstart.py
examples/basic/: main.py
examples/calling_agent/: main.py
examples/custom_store/: main.py
fastapi_a2a/: __init__.py  client.py  database.py  decorators.py  exceptions.py  logging.py  middleware.py  plugin.py
fastapi_a2a/_internal/: __init__.py  card.py  constants.py  exceptions.py  schema.py  task_manager.py  utils.py
fastapi_a2a/adapters/: __init__.py  base.py  fastapi.py
fastapi_a2a/bridge/: __init__.py  config.py  inspector.py  main.py  models.py
fastapi_a2a/domains/access_control/: evaluator.py  models.py
fastapi_a2a/domains/consent/: endpoints.py  models.py  runtime.py
fastapi_a2a/domains/core_a2a/: __init__.py  endpoints.py  models.py  schemas.py
fastapi_a2a/domains/dynamic_capability/: __init__.py  models.py  query_skill.py
fastapi_a2a/domains/embedding/: models.py  processor.py
fastapi_a2a/domains/execution_policy/: models.py  runtime.py
fastapi_a2a/domains/federation/: crawler.py  endpoints.py  models.py
fastapi_a2a/domains/key_management/: endpoints.py  models.py
fastapi_a2a/domains/registry/: endpoints.py  heartbeat.py  models.py
fastapi_a2a/domains/safety/: models.py  reputation_engine.py  sanitizer.py
fastapi_a2a/domains/security/: jwt_middleware.py  models.py  token_service.py
fastapi_a2a/domains/task_lifecycle/: endpoints.py  models.py
fastapi_a2a/domains/token_hardening/: dual_write_worker.py  models.py  rate_limiter.py
fastapi_a2a/domains/tracing/: middleware.py  models.py
fastapi_a2a/stores/: __init__.py  base.py  memory.py  redis.py
tests/: conftest.py  test_client.py  test_decorator.py  test_integration.py  test_integration_final.py  test_plugin.py  test_policy_evaluator.py  test_sanitizer.py  test_schema.py  test_taskstore.py
