[project]
name             = "fastapi-a2a"
version          = "0.1.0"
description      = "Make any FastAPI application A2A-capable — expose and consume agents"
readme           = "README.md"
license          = { text = "MIT" }
requires-python  = ">=3.11"
keywords         = ["fastapi", "a2a", "agent2agent", "ai", "llm", "asgi", "mcp"]
classifiers      = [
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0,<5",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[project.urls]
Homepage      = "https://github.com/yourorg/fastapi-a2a"
Documentation = "https://fastapi-a2a.yourorg.com"
Repository    = "https://github.com/yourorg/fastapi-a2a"
Changelog     = "https://github.com/yourorg/fastapi-a2a/blob/main/CHANGELOG.md"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages  = ["fastapi_a2a"]
artifacts = ["fastapi_a2a/py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "pyright>=1.1",
    "coverage[toml]>=7.0",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.30",
]

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF"]
ignore = ["B008"]

[tool.pyright]
pythonVersion    = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.coverage.run]
source = ["fastapi_a2a"]
omit   = [
    # Requires live Redis server — tested in CI via service container
    "fastapi_a2a/stores/redis.py",
]

[tool.coverage.report]
fail_under    = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise ImportError",
    "raise NotImplementedError",
]
